samples/_failures_safe/1761666729_0fa822_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6e66f49.c: In function ‘main’:
./samples/SAFE/__tmp_c6e66f49.c:148:20: error: missing terminating " character
  148 |             printf("
      |                    ^
./samples/SAFE/__tmp_c6e66f49.c:148:13: error: expected expression at end of input
  148 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_c6e66f49.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6e66f49.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6e66f49.c:148:13: error: expected declaration or statement at end of input
